# nocaptchaai-playwright

./: pyproject.toml  requirements.txt  setup.py
examples/: nopecha_solver.py  nopecha_solver_example.py
nocaptchaai_playwright/: solver.py
src/solver/: __init__.py  solver.py
