# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nocaptchaai-playwright"
version = "0.0.1"
description = "NoCaptchaAI implementation using Playwright"
readme = "README.md"
authors = [
    { name = "haegon", email = "" },
]
license = {file="LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["captcha", "anticaptcha", "playwright", "nocaptchaai", "solver"]
dependencies = [
    "certifi>=2022.12.7",
    "charset-normalizer>=3.1.0",
    "greenlet>=2.0.1",
    "idna>=3.4",
    "playwright>=1.32.1",
    "pyee>=9.0.4",
    "requests>=2.28.2",
    "typing_extensions>=4.5.0",
    "urllib3>=1.26.15"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "isort", "pip-tools", "pytest"]

